--- a/style.css
+++ b/style.css
@@ -6,13 +6,7 @@ body{
 
 }
 
-img{
-	float: left;
-	padding-top: 5px;
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-bottom: 5px;
-}
+
 
 header{
 	background-color: #000000;
@@ -73,10 +67,6 @@ a{
 	position: relative;
 	
 }
-.container{
-	position:relative;
-	width:inherit;
-}
 
 
 .main_news{
@@ -86,9 +76,6 @@ a{
 	
 }
 
-.main_news_info{
-	
-}
 
 .secondary_news{
 	display: grid;
@@ -98,11 +85,14 @@ a{
 .secondary_news_list{
 	list-style: none;
 }
-
+#mod{
+	padding: 15px;
+}
 .center {
 	display: flex;
 	top: 50%;
 	width: 100%;
+	
 	flex-direction: column;
 	position: absolute;
 	text-align: center;
@@ -206,12 +196,11 @@ hr{
 	border-width:0;
 	height: 1px;
 }
-.social{
+#social{
 	display: flex;
 	flex-direction: row;
 	margin-left: 90px;
-	margin-top: 10px;
-	margin-right: inherit;
+	position: absolute;
 	gap:18px;
 	
 }
@@ -270,4 +259,15 @@ padding: 2%;
 	margin: 4px 2px;
 	font-size: 16px; 
 	border-radius: 10px;
+}
+
+#supercell-title{
+	text-align: center;
+}
+
+#supercell_description{
+	float: left;
+}
+#supercell_stats{
+	float: right;
 }
