--- a/style.css
+++ b/style.css
@@ -315,7 +315,7 @@ hr{
 	flex-direction: row;
 	justify-content: space-around;
 }
-.Games h1,.news_ext h1, #form_header h1{
+.Games h1,.news_ext h1, #form_header h1,.support_container h2{
 	color: #FFFFFF;
 	font-weight: 600;
 	font-size: 3em;
