--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
 }
 body{
     font-family: 'Roboto', sans-serif;
-	overflow-x: hidden;
 	margin: 0;
+	overflow-x: hidden;
 }
 
 ul{
@@ -23,62 +23,84 @@ a{
 	color: inherit;
 	text-decoration: none;
 }
+
 /* header nav_bar */
 .nav_bar{
 	display: flex;
 	align-items: center;
 	justify-content: center;
-    overflow: hidden;
 	text-align: center;
     position: sticky;
 	width:100%;
-    
+    padding: 15px;
 }
 
-.nav_bar a {
+.header_nav_options a {
     float: left;
-    color: #f2f2f2;
+    color: #939393;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;	
+    font-size: 20px;
+	display: flex;	
+	vertical-align: middle;
 }
 
-.nav_bar a:hover{
-    color: #939393;
+.header_nav_options a:hover{
+    color: #fff;
 }
 
-.nav_bar a:active{
-    color: #ffffff;
+#section_divider{
+	margin-left: 29em;
 }
 
 .header_nav_options{
-	display:flex;
-	align-items: center;
-	width:100%;
+	overflow: hidden;
+	background-color: #000000;
+	width: 100%;
 }
 
-#header_options{
-	margin: 0 25em 0 3em;
-	gap: 24px;
-}
-
-#header_options a{
-	font-size: 20px;
-	font-weight: 400;
-	margin-right: 5px;
+.header_options{
+	margin-top: 5px;
+	margin-left: 20px;
 }
 
 
-#header_related{
-	float: right;
-	text-align: center;
-	position: relative;
-	
+.header_nav_options .icon {
+	display: none;
+}
+.icon_creation {
+	width: 21px;
+	height: 3px;
+	background-color: #fff;
+	margin: 6px 0;
+  }
+@media screen and (max-width: 576px) {
+	.header_nav_options a {display: none;}
+	.header_nav_options a.icon {
+		float: right;
+		display: block;
+	}
 }
 
-#header_related a{
-	margin: 0 10px;
+@media screen and (max-width: 576px) {
+	.header_nav_options.responsive {position: relative;}
+	.header_nav_options.responsive .icon {
+		position: absolute;
+		right: 0;
+		top: 0;
+	}	
+	.header_nav_options.responsive a {
+		float: left;
+		display: block;
+		text-align: left;
+		margin: 0;
+		font-size: 21px;
+	}
+	#section_divider{
+		margin: 0;
+	}
+
 }
 
 /* Button used to open the chat form - fixed at the bottom of the page */
@@ -152,11 +174,12 @@ a{
 	color: #fff;
 	vertical-align: middle;
 	padding: 10px;
+	justify-content: space-around;
 }
 
 .profile_picture{
-	width:10%;
-	height:10%; 
+	width:14%;
+	height:0%; 
 	border-radius: 100%;
 }
   /* Add a red background color to the cancel button */
@@ -361,7 +384,6 @@ hr{
 }
 
 .office_locations{
-	list-style: none;
 	display: flex;
 	justify-content: center;
 	gap: 80px;
@@ -392,7 +414,9 @@ hr{
     display: flex;
     justify-content: end;
 }
-
+.hiring_small{
+	display: none;
+}
 .hiring_info a{
 	background-color: #2D85F3;
 	color: white;
@@ -500,7 +524,7 @@ hr{
 	width: 100%;
 	font-size: 22px;
 	font-weight: 400;
-	padding: 15px;
+	padding: 15px 7em;
 	text-align: center;
 }
 #location {
@@ -616,17 +640,17 @@ hr{
 	width: 100%;
 	font-weight: 600;
 	font-size: 25px;
-	padding-left: 10vw;
 }
 
 .belief_des{
 	font-weight: 400;
 	font-size: 22px;
 	width: 100%;
+	text-align: justify;
+	padding: 0 10em;
 }
 .belief_container{
-	margin-top: 15px;
-	margin-left: 25vw;
+	text-align: center;
 }
 
 .question h2{
@@ -659,15 +683,11 @@ hr{
 	border-radius: 8px;
 }
 .game_details{
-	flex: auto;
+	flex: 20;
 	margin-left: 2em;
 	font-weight: 500;
 }
-/* special for hay day due to its longer description */
-.game_detail_special{ 
-	flex: auto;
-	margin-left: 1em;
-}
+
 
 .game_link{
 	flex: auto;
